# puccinialin

./: Changelog.md  pyproject.toml
.github/: renovate.json5
.github/workflows/: ci.yml  publish.yml
src/puccinialin/: _setup_rust.py  _target.py
tests/: parallelism.dockerfile  parallelism.sh  test_target.py
