[project]
name = "puccinialin"
version = "0.1.7"
description = "Install rust into a temporary directory for boostrapping a rust-based build backend"
readme = "README.md"
authors = [
    { name = "konstin", email = "konstin@mailbox.org" }
]
requires-python = ">=3.9"
dependencies = [
    "filelock>=3.19.1,<4.0.0",
    "httpx>=0.28.1,<0.29",
    "platformdirs>=4.3.6,<5",
    "tqdm>=4.67.1,<5",
]
license = "MIT OR Apache-2.0"
license-files = ["license-mit", "license-apache"]

[project.scripts]
puccinialize = "puccinialin.__main__:main"

[project.urls]
repository = "https://github.com/konstin/puccinialin"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["B", "I"]

[dependency-groups]
dev = [
    "ty>=0.0.1a27",
]
